--- a/Mel/css/style.css
+++ b/Mel/css/style.css
@@ -464,3 +464,55 @@ input:focus {
     padding: 8px;
     font-size: 100%;
 }
+
+
+#filter-input {
+    display: flex;
+    margin-left: 380px;
+    margin-top: -30px;
+}
+
+/* Dropdown Button */
+.sortBtn {
+ margin-top: 15px;
+  margin-left: 100px;
+  
+  background-color: #20B2AA;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.sortArticles {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content */
+.sortArticlesContent {
+  display: none;
+  position: absolute;
+   margin-left: 100px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+ 
+}
+
+/* Links inside the dropdown */
+.sortArticlesContent  a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.sortArticlesContent  a:hover {background-color: #ddd}
+
+.show {display:block;}
+
+.search {
+  margin-right: 10px;
+}
